# Marching_Cubes_Sculpturing

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: lib.rs
core/src/buffers/: buffer.rs  mod.rs  vertex_attributes.rs
core/src/context/: mod.rs  synchronization_context.rs
core/src/shaders/: mod.rs  shader.rs  shader_programm.rs  uniforms.rs
core/src/textures/: image_provider.rs  mod.rs  texture.rs
macros/: Cargo.toml
macros/src/: derive_uniforms.rs  derive_vertex_def.rs  lib.rs
resources/shader_sources/: display_model.frag  display_model.vert  display_quad.frag  display_tex3d.frag  display_tex3d.vert  fill_circle.compute  marching_cubes.compute
resources/shader_sources/brushes/: circle_brush.compute  flatten_brush_apply.compute
resources/shader_sources/drawing/: display_model.vert  display_quad.vert  shaded_model.frag  shaded_model.vert
resources/shader_sources/marching_cubes/: fill_circle.compute  marching_cubes.compute  marching_cubes_indexer.compute  zero_field.compute
src/: application.rs  main.rs
src/algorithms/: cordinates.rs  grid_line_intersection.rs  mod.rs  raycast.rs  transform.rs
src/algorithms/camera/: mod.rs  perspective.rs
src/application/: app_logick.rs  bit_field.rs  chunk.rs  triangulation_table.rs
src/application/cunks/: chunk.rs  collision_shape.rs  field.rs  mod.rs
src/application/cunks/marching_cubes/: block_marcher.rs  full_marcher.rs  mod.rs
src/application/support/: bit_field.rs  bounds.rs  camera_ref.rs  collision_shape.rs  debugger.rs  mod.rs  simple_quad.rs  triangulation_table.rs
(+5 files in other folders)
