[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glsl = "7.0.0"
litrs = "0.4.1"
proc-macro2 = {version = "1.0.76", features=["default", "proc-macro"] }
quote = "1.0.35"
regex = "1.10.2"
syn = {version = "2.0.48", features = ["full"]}
core = {path = "../core"}
seahash = "4.1.0"
